# cfs-state-reporter

./: .gitignore  CHANGELOG.md  Jenkinsfile.cn  Jenkinsfile.github  Jenkinsfile.sles15ncn  MANIFEST.in  Makefile  README.md  cfs-state-reporter.spec  constraints.txt  git_info.conf  pyproject.toml  runBuildPrep.sh  runLint.sh  setup.py
etc/: cfs-state-reporter.service
src/cfs/: __init__.py  client.py  node_identity.py
src/cfs/components/: __init__.py  state.py
src/cfs/status_reporter/: __main__.py
